--- a/whitelist-on.html
+++ b/whitelist-on.html
@@ -3,7 +3,7 @@
     height: 100%;
 ">
 <head>
-<title>WhiteList Mode is ON| Telegraph-Image</title>
+<title>Gitlayzer`s Picture Bed</title>
 <meta charset="UTF-8">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -25,7 +25,7 @@
 <br>
 <div>Powered By: <span><a style="
     color: cornflowerblue;"
-    href="https://github.com/cf-pages/Telegraph-Image">Telegraph-Image</a></span></div>
+    href="https://github.com/gitlayzer">Gitlayzer`s Picture Bed</a></span></div>
 </div>
 
 
