--- a/whitelist-on.html
+++ b/whitelist-on.html
@@ -25,7 +25,7 @@
 <br>
 <div>Powered By: <span><a style="
     color: cornflowerblue;"
-    href="https://github.com/gitlayzer">Gitlayzer`s Picture Bed</a></span></div>
+    href="https://github.com/gitlayzer">CloudFlare</a></span></div>
 </div>
 
 
